update: changes for new feature/fix

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UjwalAcademy</title>
+  <title>Ujwal Academy - Best Coaching in Amravati</title>
   <base href="/">
+  <meta name="description" content="Ujwal Academy, Amravati - Expert coaching, IT training, and academic excellence. Join us to build your future.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
