--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Ujwal Academy - Best Coaching in Amravati</title>
   <base href="/">
-  <meta name="description" content="Ujwal Academy, Amravati - Expert coaching, IT training, and academic excellence. Join us to build your future.">
-
+  <meta name="description"
+    content="Ujwal Academy, Amravati - Expert coaching, IT training, and academic excellence. Join us to build your future.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://ujwalacademy.org/">
+  <meta property="og:title" content="Ujwal Academy - Best Coaching in Amravati">
+  <meta property="og:description" content="Expert coaching, IT training, and academic help.">
+  <meta property="og:url" content="https://ujwalacademy.org/">
+  <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
