--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <title>Ujwal Academy - Best Coaching in Amravati</title>
   <base href="/">
+  <link rel="icon" type="image/png" href="assets/logo1.jpeg">
+  <link rel="apple-touch-icon" href="assets/logo1.jpeg">
+  <meta name="theme-color" content="#000000">
   <meta name="description"
     content="Ujwal Academy, Amravati - Expert coaching, IT training, and academic excellence. Join us to build your future.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,6 +21,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Ujwal Academy",
+  "url": "https://ujwalacademy.org",
+  "logo": "https://ujwalacademy.org/assets/logo1.jpeg",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+91-9307457319",
+    "areaServed": "IN"
+  },
+}
+</script>
 
 </head>
 
